# nlaudio

./: .gitignore  CMakeLists.txt  Todo.txt  alsacardidentifier.cpp  alsacardidentifier.h  alsacardinfo.cpp  alsacardinfo.h  alsadeviceinfo.cpp  alsasubdeviceinfo.cpp  altbiquadfilters.h  audio.h  audioalsa.cpp  audioalsa.h  audioalsaexception.cpp  audioalsaexception.h  audioalsainput.cpp  audioalsainput.h  audioalsaoutput.cpp  audioalsaoutput.h  audiobuffer.cpp  audiobuffer.h  audioconfig.cpp  audioconfig.h  audiofactory.cpp  audiofactory.h  audiojack.cpp  audiojack.h  biquadfilters.cpp  biquadfilters.h  blockingcircularbuffer.h  blockinglinearbuffer.h  blockingsmaplestorage.h  bufferstatistics.cpp  cabinet.cpp  cabinet.h  circularaudiobuffer.h  combfilter.cpp  combfilter.h  cpu_stopwatch.cpp  echo.cpp  (+76 more)
anton/: biquadfilters.h  cabinet.h  combfilter.cpp  echo.cpp  echo.h  effects.h  main.cpp  minisynth.cpp  minisynth.h  nltoolbox.h  oscillator.h  oscshapeui.cpp  oscshapeui.h  oscshapeui.ui  outputmixer.h  shaper.cpp  tiltfilters.h
doc/: Design.odg  Todo.txt  doxyconfig
doc/html/: _formulas.tex  alsacardidentifier_8h_source.html  alsacardinfo_8h_source.html  alsadeviceinfo_8h_source.html  alsasubdeviceinfo_8h_source.html  annotated.html  audio_8h_source.html  audioalsa_8h_source.html  audioalsaexception_8h_source.html  audioalsainput_8h_source.html  audioalsaoutput_8h_source.html  audioconfig_8h_source.html  audiofactory_8h_source.html  blockingcircularbuffer_8h_source.html  blockinglinearbuffer_8h_source.html  bufferstatistics_8h_source.html  classNl_1_1AlsaCardIdentifier.html  classNl_1_1AlsaDeviceIdentifier.html  classNl_1_1Audio.html  classNl_1_1AudioAlsa.html  classNl_1_1AudioAlsaException.html  classNl_1_1AudioAlsaInput.html  classNl_1_1AudioAlsaOutput.html  classNl_1_1AudioException.html  classNl_1_1BlockingCircularBuffer.html  classNl_1_1BlockingLinearBuffer.html  classNl_1_1Midi.html  classNl_1_1NlAudioConfig.html  classNl_1_1RawMidiDevice.html  classNl_1_1RawMidiDeviceException.html  classNl_1_1StopBlockTime.html  classNl_1_1StopWatch.html  classStopFunctionTime.html  classes.html  examples_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  group__Audio.html  (+26 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  groups_1.js  groups_2.js  pages_0.js  search.js  (+8 more)
doc/latex/: annotated.tex  classNl_1_1AlsaCardIdentifier.tex  classNl_1_1AlsaDeviceIdentifier.tex  classNl_1_1Audio.eps  classNl_1_1Audio.tex  classNl_1_1AudioAlsa.eps  classNl_1_1AudioAlsa.tex  classNl_1_1AudioAlsaException.eps  classNl_1_1AudioAlsaException.tex  classNl_1_1AudioAlsaInput.eps  classNl_1_1AudioAlsaInput.tex  classNl_1_1AudioAlsaOutput.eps  classNl_1_1AudioAlsaOutput.tex  classNl_1_1AudioException.eps  classNl_1_1AudioException.tex  classNl_1_1BlockingCircularBuffer.tex  classNl_1_1BlockingLinearBuffer.tex  classNl_1_1Midi.eps  classNl_1_1Midi.tex  classNl_1_1NlAudioConfig.tex  classNl_1_1RawMidiDevice.eps  classNl_1_1RawMidiDevice.tex  classNl_1_1RawMidiDeviceException.eps  classNl_1_1RawMidiDeviceException.tex  classNl_1_1StopBlockTime.tex  classNl_1_1StopWatch.tex  classStopFunctionTime.tex  group__Audio.tex  group__Factory.tex  group__Midi.tex  group__Tools.tex  hierarchy.tex  index.tex  modules.tex  refman.tex  structNl_1_1AlsaCardInfo.tex  structNl_1_1AlsaDeviceInfo.tex  structNl_1_1AlsaSubdeviceInfo.tex  structNl_1_1BufferStatistics.tex  structNl_1_1Examples_1_1ExamplesHandle.tex  (+9 more)
examples/: CMakeLists.txt  c15_audio_engine.cpp  examples.cpp  examples.h  inputtooutput.cpp  inputtooutput.h  main.cpp  midisine.cpp  midisine.h  recorder.cpp  recorder.h  silence.cpp  silence.h
examples/c15_audio_engine/: ae_combfilter.cpp  ae_combfilter.h  ae_outputmixer.cpp  ae_outputmixer.h  ae_soundgenerator.cpp  ae_soundgenerator.h  ae_svfilter.cpp  ae_svfilter.h  biquadfilters.cpp  biquadfilters.h  cabinet.cpp  cabinet.h  combfilter.cpp  combfilter.h  cpu_stopwatch.h  dsp_defines_session.h  dsp_defines_signallabels.h  dsp_host.cpp  dsp_host.h  dsp_host_handle.cpp  dsp_host_handle.h  echo.cpp  echo.h  effects.h  envelopes.cpp  envelopes.h  feedbackmixer.cpp  feedbackmixer.h  flanger.cpp  flanger.h  gapfilter.cpp  gapfilter.h  minisynth.cpp  minisynth.h  nlglobaldefines.cpp  nlglobaldefines.h  nltoolbox.h  onepolefilters.cpp  onepolefilters.h  onesoundgenerator.cpp  (+41 more)
include/audio/: audio.h  audioalsa.h  audioalsainput.h  audioalsaoutput.h  audiofactory.h  audiojack.h  audiojackinput.h  samplespecs.h
include/audio/alsa/: alsadeviceinfo.h  alsasubdeviceinfo.h
include/common/: blockingcircularbuffer.h  blockinglinearbuffer.h  lockfreecircularbuffer.h  nonblockingcircularbuffer.h  stopwatch.h  tools.h
include/midi/: rawmididevice.h
include/nlaudio/audio/: audio.h  audioalsa.h  audioalsaexception.h  audioalsainput.h  audioalsaoutput.h  audiofactory.h  audiojack.h  audiojackinput.h  samplespecs.h
include/nlaudio/common/: blockingcircularbuffer.h  blockinglinearbuffer.h  bufferstatistics.h  controlinterface.h  lockfreecircularbuffer.h  nonblockingcircularbuffer.h  stopwatch.h  (+1 more)
include/vamp/: vamphost.h  vamphostaubiotempo.h
src/audio/: audioalsa.cpp  audioalsaexception.cpp  audioalsainput.cpp  audioalsaoutput.cpp  audiofactory.cpp  audiofactory.h  audiojack.cpp  audiojackinput.cpp  samplespecs.cpp
src/common/: bufferstatistics.cpp  controlinterface.cpp  stopwatch.cpp  tools.cpp
src/dsptoolbox/: cpu_stopwatch.h  effects.cpp  onepolefilters.h  onesoundgenerator.cpp  onesoundgenerator.h  smoother.h  voicemanager.cpp
src/midi/: rawmididevice.cpp  rawmidideviceexception.cpp
src/vamp/: vamp-simple-host.cpp  vamphost.cpp  vamphostaubiotempo.cpp
(+16 files in other folders)
